<resources>
    <string name="app_name">YouFood</string>
    <string name="bottom_navigation_restaurants">Restaurants</string>
    <string name="bottom_navigation_account">Account</string>
    <string name="bottom_navigation_budget">Budget</string>
    <string name="cuisines_title">Cuisines</string>
    <string name="average_cost_title">Average Cost</string>
    <string name="rating_title">Rating</string>
    <string name="temp_restaurant_name">YouFood Restaurant</string>
    <string name="temp_restaurant_cuisines">Italian, Pizza</string>
    <string name="temp_restaurant_location">201 N Goodwin Ave, Urbana, IL 61801</string>
    <string name="temp_restaurant_average_cost">$30 per person (approx.)</string>
    <string name="temp_restaurant_price_range">$$$$$</string>
    <string name="temp_restaurant_num_votes">1334 Votes</string>
    <string name="google_maps_key">AIzaSyArjeAfpmmBG9EvwjISIP4J6hF2aKXWFgc</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="restaurant_detail_activity_reviews_header">Reviews</string>
    <string name="restaurant_detail_write_your_review">Write your review...</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_signup_header">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="signup_button_title">Create an account</string>
    <string name="email">Email</string>
    <string name="user">User</string>
    <string name="owner">Owner</string>
    <string name="network_failed_message">Network Request Failed. Check Network Connection And Try Again!</string>

    <!-- RestaurantDetailActivity -->
    <string name="one_dollar_sign_description">$10 or less per person</string>
    <string name="two_dollar_signs_description">$11-$30 per person</string>
    <string name="three_dollar_signs_description">$31-$60 per person</string>
    <string name="four_dollar_signs_description">$61 or more per person</string>

    <string name="edit_review">Edit Review</string>
    <string name="delete_review">Delete Review</string>
    <string name="close">close</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="balance">Current Budget</string>

    <string name="division_sign">\u00F7</string>
    <string name="multiplication_sign">*</string>
    <string name="subtraction_sign">-</string>
    <string name="addition_sign">+</string>
    <string name="equal_sign">=</string>

    <string name="auto_complete_text_add_transaction_hint">Search a Restaurant</string>

    <!-- Restaurant Fragment -->
    <string name="edittext_restaurants_city_name_hint">City Name</string>
    <string name="edittext_restaurants_name_hint">Restaurant Name</string>
    <string name="edittext_restaurants_category_hint">Category Name</string>
    <string name="edittext_restaurants_address_hint">123 Main St, San Francisco, CA 99999</string>
    <string name="textview_restaurants_name_label">By Name?</string>
    <string name="textview_restaurants_city_label">By City?</string>
    <string name="textview_restaurants_filter_label">Filters</string>
    <string name="textview_restaurants_address_label">By Address?</string>
    <string name="textview_restaurants_category_label">By Category?</string>
    <string name="textview_restaurants_price_range_label">By Price Range?</string>

</resources>
