<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey100"
    tools:context="com.cs411.droptableuser.youfood_android_app.RestaurantDetailActivity"
    tools:layout_editor_absoluteY="81dp">

    <fragment
        android:id="@+id/google_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <RelativeLayout
        android:id="@+id/relative_layout_detail"
        android:layout_width="0dp"
        android:layout_height="230dp"
        android:layout_marginBottom="110dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_map">

        <TextView
            android:id="@+id/text_detail_restaurant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/text_detail_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/text_detail_restaurant_name"
            android:layout_below="@+id/text_detail_restaurant_name"
            android:fontFamily="@font/roboto"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/text_detail_price_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_detail_restaurant_name"
            android:layout_alignBottom="@+id/text_detail_restaurant_name"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:textSize="15sp" />

        <RatingBar
            android:id="@+id/rating_bar_detail_aggregate_rating"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_detail_rating_title"
            android:layout_marginEnd="73dp"
            android:layout_toStartOf="@+id/text_detail_price_range"
            android:numStars="5"
            android:rating="0"
            android:stepSize="0.5" />

        <TextView
            android:id="@+id/text_detail_cuisines_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/text_detail_location"
            android:layout_centerVertical="true"
            android:fontFamily="@font/roboto"
            android:text="@string/cuisines_title"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/text_detail_cuisines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/text_detail_cuisines_title"
            android:layout_below="@+id/text_detail_cuisines_title"
            android:fontFamily="@font/roboto"
            android:maxWidth="170dp"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/text_detail_average_cost_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/text_detail_cuisines"
            android:layout_below="@+id/text_detail_cuisines"
            android:layout_marginTop="8dp"
            android:text="@string/average_cost_title"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/text_detail_average_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/text_detail_average_cost_title"
            android:layout_below="@+id/text_detail_average_cost_title"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/text_detail_rating_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_detail_cuisines_title"
            android:layout_alignBottom="@+id/text_detail_cuisines_title"
            android:layout_alignStart="@+id/rating_bar_detail_aggregate_rating"
            android:fontFamily="@font/roboto"
            android:text="@string/rating_title"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/text_detail_num_votes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/rating_bar_detail_aggregate_rating"
            android:layout_toStartOf="@+id/text_detail_price_range"
            android:fontFamily="@font/roboto" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
