<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_add_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_layout_add_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_add_transaction"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        app:hintEnabled="false">

        <AutoCompleteTextView
            android:id="@+id/auto_textview_add_transaction"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="Search a Restaurant"
            android:inputType="text"
            android:maxLines="1"
            android:theme="@style/AutoCompleteTextViewUnderline" />

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:id="@+id/relative_layout_display"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_layout_add_transaction"
        android:background="@color/Red2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_add_transaction_subtraction_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/subtraction_sign"
            android:textColor="@android:color/white"
            android:textScaleX="3.0"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textview_add_transaction_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="right"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto"
            android:text="USD"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textview_add_transaction_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@+id/textview_add_transaction_currency"
            android:fontFamily="@font/roboto"
            android:text="0.00"
            android:textColor="@android:color/white"
            android:textSize="30sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/button_add_transaction_date_picker"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_layout_display"
        android:text="Calendar" />

    <View
        android:id="@+id/divider_add_transaction"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_below="@+id/button_add_transaction_date_picker"/>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="330dp"
        android:layout_height="match_parent"
        android:layout_below="@+id/divider_add_transaction"
        android:orientation="vertical"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_add_transaction_num_7"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:text="7"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_add_transaction_num_8"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:text="8"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_add_transaction_num_9"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:text="9"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_add_transaction_num_4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:text="4"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_add_transaction_num_5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:text="5"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_add_transaction_num_6"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:text="6"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_add_transaction_num_1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:text="1"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_add_transaction_num_2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:text="2"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_add_transaction_num_3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:text="3"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_add_transaction_dot"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:text="."
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_add_transaction_num_0"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="0"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_add_transaction_erase"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ic_keyboard_backspace_black_24dp"
                android:scaleX="0.3"
                android:scaleY="0.3"
                android:textAlignment="viewStart" />

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="false"
        android:layout_alignTop="@+id/tableLayout"
        android:layout_toEndOf="@+id/tableLayout"
        android:orientation="vertical"
        android:weightSum="5">

        <Button
            android:id="@+id/button_add_transaction_division"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:text="@string/division_sign"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_add_transaction_multiplication"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:text="@string/multiplication_sign"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_add_transaction_subtraction"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:text="@string/subtraction_sign"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_add_transaction_addition"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:text="@string/addition_sign"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_add_transaction_equal"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:text="@string/equal_sign"
            android:textSize="24sp" />
    </LinearLayout>

</RelativeLayout>