<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:layout_editor_absoluteY="25dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/app_bar_background"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/textview_signup_username_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed"
        app:titleTextColor="@color/white"
        app:title="Register" />

    <TextView
        android:id="@+id/textview_signup_username_title"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="PICK A USERNAME"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/text_input_layout_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_signup" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="8dp"
        app:errorEnabled="true"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/textview_signup_info_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_signup_username_title">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edittext_signup_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_200"
            android:fontFamily="@font/roboto"
            android:hint="What should everyone call you?"
            android:inputType="textPersonName"
            android:paddingBottom="12dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:textSize="18sp" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textview_signup_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto"
        android:text="ENTER LOGIN INFORMATION"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/text_input_layout_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_username" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:errorEnabled="true"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/divider_signup_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_signup_info_title">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edittext_signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_200"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingBottom="12dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="12dp" />

    </android.support.design.widget.TextInputLayout>

    <View
        android:id="@+id/divider_signup_one"
        style="@style/Divider"
        app:layout_constraintBottom_toTopOf="@+id/text_input_layout_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_email" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/button_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_signup_one">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edittext_signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_200"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingBottom="12dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="12dp" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/signup_button_title"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>